Archiving from Micro.blog.

--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@ int main(int argc, char* argv[]) {
         <div class="e-content">
          	<p>A post with a photo: the Austin FC supporters section.</p>
 
-<p><img src="uploads/2021/7a08335c23.jpg" width="600" height="399" alt="" /></p>
+<p><img src="https://brokaw.micro.blog/uploads/2021/7a08335c23.jpg" width="600" height="399" alt="" /></p>
 
 <p>Note: not my photo. I&rsquo;m in that crowd somewhere.</p>
 
